# Ferron-Proxy-Manager

./: .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.yml  tbump.toml
.github/workflows/: docker-publish.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_01_15_1624-f334f396e38f_initial_schema.py  2026_01_16_1235-c96b5bfa07e5_initial_schema.py
backend/src/: config.py  database.py  exceptions.py  main.py  service.py  utils.py
backend/src/auth/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/ferron/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/ferron/templates/: _base_virtual_host.j2  _cache_template.j2  base_virtual_host.j2  global.j2  load_balancer.j2  load_balancing.j2  reverse_proxy.j2  serve_static_file.j2  static_file.j2
backend/src/management/: constants.py  exceptions.py  router.py  schemas.py  service.py  types.py
backend/tests/ferron/: ferron.kdl  test_service.py  test_service_set.py
backend/tests/ferron/utils/: test_render_global_template.py  test_render_reverse_proxy_template.py  test_render_static_file_template.py
docs/: USAGE.md
frontend/: .dockerignore  .env.example  .prettierrc  Dockerfile  Dockerfile.dev  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/: apiClient.ts  formUtils.ts
frontend/src/lib/components/: app-sidebar.svelte  config-type-selector.svelte  error-404.svelte  global-config-form.svelte  host-action-buttons.svelte  hosts-data-table.svelte  load-balancer-host-form.svelte  login-form.svelte  reverse-proxy-host-form.svelte  signup-form.svelte  signups-disabled.svelte  theme-switcher.svelte  (+3 more)
frontend/src/routes/: +error.svelte  +layout.svelte  layout.css
(+63 files in other folders)
