[project]
name = "Ferron-Proxy-Manager"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.*"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.20.0",
    "ckdl>=1.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.121.0",
    "jinja2>=3.1.6",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.10.1",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.36",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "ANN",
    "FAST",
    "ASYNC"
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


